--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
 <footer>
   <p>&copy; 2025 Yesenia Oruna. All rights reserved.</p>
+  <!-- Elimina la línea o modifícala -->
+  <p>This project is maintained by yesi-or</p>
 </footer>
